# UbiHome-Builder

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.cli  README.md  docker-compose.yml
cli/: Cargo.toml
cli/src/: main.rs
engine/: Cargo.toml
engine/src/: compile.rs  git.rs  lib.rs  platforms.rs  store.rs  targets.rs  validate.rs
engine/tests/: integration.rs
frontend/: README.md  angular.json  package-lock.json  package.json  proxy.conf.json
frontend/src/: index.html  styles.css
frontend/src/app/: api.service.ts  app.css  app.html  app.ts
server/: Cargo.toml  build.rs
server/src/: api.rs  assets.rs  main.rs
