# Standalone workspace for the UbiHome Builder.
# Intentionally NOT part of the root UbiHome workspace so a normal `cargo build`
# of UbiHome is unaffected by these crates.
[workspace]
resolver = "2"
members = ["engine", "cli", "server"]

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["Daniel Habenicht <daniel.habenicht@life.li>"]
license = "MIT"

[workspace.dependencies]
ubihome-builder-engine = { path = "engine" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
strip = true
lto = true
