[package]
name = "ubihome-builder-server"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
description = "Web dashboard for the UbiHome builder (esphome-builder style). Embeds the Angular SPA; the CLI does not."

[[bin]]
name = "ubihome-builder-server"
path = "src/main.rs"

[dependencies]
ubihome-builder-engine = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors"] }
clap = { version = "4.5", features = ["derive", "env"] }
rust-embed = "8"
mime_guess = "2"
